Added checkbox to auto turn on saved replacing

--- a/popup.html
+++ b/popup.html
@@ -9,8 +9,12 @@
     <div class="form-style-6">
         <h1><img src="resources/icon48.png" alt="logo">Пора разбавить скучные тексты!</h1>
         <p>
-            <input id="textToReplace" type="text" placeholder="Что заменить" value="коронавирус" size="10">
-            <input id="newText" type="text" placeholder="На что заменить" value="писька" size="10">
+            <input id="textToReplace" type="text" placeholder="Что заменить" size="10">
+            <input id="newText" type="text" placeholder="На что заменить" size="10">
+            <p>
+                <input id="autoChangeText" type="checkbox">
+                <label for="autoChangeText">Автозамена текста</label>
+            </p>
             <input id="submit" type="submit" value="Сохранить">
         </p>
     </div>
